--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "dotenv": "^14.1.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
