--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "author": "Irfan",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/poppins": "^4.5.0",
     "babel-polyfill": "^6.26.0",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "framer-motion": "^5.6.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
