--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^7.24.1",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
